--- a/Production/contact.html
+++ b/Production/contact.html
@@ -138,7 +138,7 @@
       "
     ></div>
   </div>
-  <nav class="z-[1000] w-full fixed px-5 sm:px-8 pt-1 sm:pt-5 nav-top">
+  <!-- <nav class="z-[1000] w-full fixed px-5 sm:px-8 pt-1 sm:pt-5 nav-top">
     <div class="flex justify-between">
       <a href="index.html">
         <img
@@ -158,9 +158,9 @@
         ></div>
       </div>
     </div>
-  </nav>
+  </nav> -->
 </header>
-<nav
+<!-- <nav
   data-lenis-prevent="true"
   class="menu fixed right-6 top-0 w-full min-h-screen overflow-y-auto z-[99999] before:content-none md:before:content-[''] before:absolute before:w-[1px] before:h-[calc(100vh-94px)] before:left-[45%] before:top-0 before:bg-white before:bg-opacity-10 opacity-0"
 >
@@ -704,7 +704,7 @@
       </div>
     </div>
   </div>
-</nav>
+</nav> -->
 <div
   class="menu-overflow fixed z-[9999] bg-[rgba(10,10,10,0.95)] bg-opacity-60 backdrop-blur-[25px] w-full h-full pointer-events-none"
 ></div>
