--- a/Production/homepage-02.html
+++ b/Production/homepage-02.html
@@ -14,6 +14,7 @@
 
   <!-- Stylesheets -->
   <link href="css/main.css" rel="stylesheet" />
+  <link href="css/navbar.css" rel="stylesheet" />
   
   <!--Favicon-->
   <link rel="icon" type="image/png" href="images/favicon-96x96.png" sizes="96x96" />
@@ -138,7 +139,7 @@
       "
     ></div>
   </div>
-  <nav class="z-[1000] w-full fixed px-5 sm:px-8 pt-1 sm:pt-5 nav-top">
+  <!-- <nav class="z-[1000] w-full fixed px-5 sm:px-8 pt-1 sm:pt-5 nav-top">
     <div class="flex justify-between">
       <a href="index.html">
         <img
@@ -158,9 +159,9 @@
         ></div>
       </div>
     </div>
-  </nav>
+  </nav> -->
 </header>
-<nav
+<!-- <nav
   data-lenis-prevent="true"
   class="menu fixed right-6 top-0 w-full min-h-screen overflow-y-auto z-[99999] before:content-none md:before:content-[''] before:absolute before:w-[1px] before:h-[calc(100vh-94px)] before:left-[45%] before:top-0 before:bg-white before:bg-opacity-10 opacity-0"
 >
@@ -704,7 +705,7 @@
       </div>
     </div>
   </div>
-</nav>
+</nav> -->
 <div
   class="menu-overflow fixed z-[9999] bg-[rgba(10,10,10,0.95)] bg-opacity-60 backdrop-blur-[25px] w-full h-full pointer-events-none"
 ></div>
@@ -2033,6 +2034,7 @@
 <script src="js/lib/swiper.min.js"></script>
 <script src="js/lib/headroom.min.js"></script>
 <script src="js/lib/vanila-marquee.min.js"></script>
+<script src="js/navbar.js"></script>
 <script src="js/script.js"></script>
 </body>
 
