--- a/Production/index.html
+++ b/Production/index.html
@@ -14,6 +14,7 @@
 
   <!-- Stylesheets -->
   <link href="css/main.css" rel="stylesheet" />
+  <link href="css/navbar.css" rel="stylesheet" />
   
   <!--Favicon-->
   <link rel="icon" type="image/png" href="images/favicon-96x96.png" sizes="96x96" />
@@ -24,35 +25,18 @@
 </head>
 <body >
 
-<header id="header" class="w-full fixed z-[9999]">
+<main class="lg:mb-[600px] relative z-10 bg-backgroundBody dark:bg-dark">
+    <!--=====================================
+   Hero Section with Gradient
+======================================-->
+<section
+  class="pt-[137px] md:pt-[160px] xl:pt-[180px] pb-20 md:pb-[100px] relative overflow-hidden"
+>
+  <!-- Gradient Background Wrapper -->
   <div
-    class="w-full fixed h-[155px] top-0 z-[21] pointer-events-none gradient-shadow"
+    id="hero-gradient-wrapper"
+    class="absolute w-full h-full top-0 left-0 -z-10 blur-[35px] md:blur-[60px]"
   >
-    <div
-      class="absolute inset-0 pointer-events-none"
-      style="backdrop-filter: blur(0px); -webkit-backdrop-filter: blur(0px)"
-    ></div>
-    <div
-      class="absolute inset-0 pointer-events-none rounded-[inherit]"
-      style="
-        mask-image: linear-gradient(
-          0deg,
-          rgba(255, 255, 255, 0) 0%,
-          rgba(255, 255, 255, 1) 16.666666666666664%,
-          rgba(255, 255, 255, 1) 33.33333333333333%,
-          rgba(255, 255, 255, 0) 50%
-        );
-        -webkit-mask-image: linear-gradient(
-          0deg,
-          rgba(255, 255, 255, 0) 0%,
-          rgba(255, 255, 255, 1) 16.666666666666664%,
-          rgba(255, 255, 255, 1) 33.33333333333333%,
-          rgba(255, 255, 255, 0) 50%
-        );
-        backdrop-filter: blur(-7px);
-        -webkit-backdrop-filter: blur(-7px);
-      "
-    ></div>
     <div
       class="absolute inset-0 pointer-events-none rounded-[inherit]"
       style="
@@ -754,6 +738,8 @@
   </button>
 </div>
 
+
+<body >
 
 <main class="lg:mb-[600px] relative z-10 bg-backgroundBody dark:bg-dark">
     <!--=====================================
@@ -2463,6 +2449,7 @@
 <script src="js/lib/swiper.min.js"></script>
 <script src="js/lib/headroom.min.js"></script>
 <script src="js/lib/vanila-marquee.min.js"></script>
+<script src="js/navbar.js"></script>
 <script src="js/script.js"></script>
 </body>
 
